CustomObjects/objects/invoiceit_s__Usage_Charge__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__EndDateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__ErrorReason__c</fullName>
        <label>Error Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Invoice Line against which this usage was billed</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>invoiceit_s__Invoice_Lines__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Invoice against which the usages are billed</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>invoiceit_s__Invoice__c</referenceTo>
        <relationshipLabel>Usages billed in this Invoice</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Line_Name__c</fullName>
        <formula>invoiceit_s__Invoice_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Master_Usage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to the usage charge against the Master Order where the current usage units are rolled up to.</description>
        <inlineHelpText>Points to the usage charge against the Master Order where the current usage units are rolled up to.</inlineHelpText>
        <label>Master Usage</label>
        <referenceTo>invoiceit_s__Usage_Charge__c</referenceTo>
        <relationshipLabel>Child Usages</relationshipLabel>
        <relationshipName>MasterUsages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__MediationStatus__c</fullName>
        <label>Mediation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Rate Plan Charge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>invoiceit_s__Job_Rate_Plan_Charge__c.invoiceit_s__Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.invoiceit_s__Order__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>invoiceit_s__Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Charge_Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>invoiceit_s__Job__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__StartDateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Un-billed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Billed</fullName>
                </value>
                <value>
                    <fullName>Rolled-Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__UsageMediation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usage Mediation</label>
        <referenceTo>invoiceit_s__Usage_Mediation__c</referenceTo>
        <relationshipLabel>Usages</relationshipLabel>
        <relationshipName>Usages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Usage</label>
    <nameField>
        <displayFormat>USG-{000}</displayFormat>
        <label>Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>invoiceit_s__Cannot_change_status_from_Completed</fullName>
        <active>true</active>
        <description>You cannot change the Mediation status of a Completed Usage</description>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE 
(invoiceit_s__MediationStatus__c), 
&quot;Completed&quot;) &amp;&amp; ISCHANGED(invoiceit_s__MediationStatus__c)</errorConditionFormula>
        <errorMessage>Cannot change the Mediation status from Completed to other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__End_Date_Time</fullName>
        <active>true</active>
        <description>End Date Time should be greater than Start Date Time</description>
        <errorConditionFormula>invoiceit_s__StartDateTime__c &gt; invoiceit_s__EndDateTime__c &amp;&amp; 
NOT(ISBLANK(TEXT(invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Usage_Frequency__c)))</errorConditionFormula>
        <errorMessage>End Date Time should be greater than Start Date Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__End_Date_Time_Should_be_Present</fullName>
        <active>true</active>
        <description>End Date Time should be present for Usage Charges for Advance Usage Billing</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ISBLANK(invoiceit_s__EndDateTime__c) &amp;&amp; 
NOT(ISBLANK(TEXT(invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Usage_Frequency__c)))</errorConditionFormula>
        <errorMessage>End Date Time should be present for Usage Charge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Quantity_Should_be_present_for_Usage</fullName>
        <active>true</active>
        <description>Quantity should be present for Usage Charges for Advance Usage Billing</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ISBLANK( invoiceit_s__Quantity__c ) &amp;&amp; 
NOT(ISBLANK(TEXT(invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Usage_Frequency__c)))</errorConditionFormula>
        <errorMessage>Quantity should be present for Usage Charge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Start_Date_Time_Should_be_Present</fullName>
        <active>true</active>
        <description>Start Date Time should be present for Usage Charges for Advance Usage Billing</description>
        <errorConditionFormula>ISNEW() &amp;&amp; ISBLANK(invoiceit_s__StartDateTime__c) &amp;&amp; 
NOT(ISBLANK(TEXT(invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Usage_Frequency__c)))</errorConditionFormula>
        <errorMessage>Start Date Time should be present for Usage Charge</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Usage_End_Date_Between_Charge_Dates</fullName>
        <active>true</active>
        <description>Usage End Date should be in between Order Charge Service Activation and Service End Dates (included)
Note : Time is not consider as part of this rule</description>
        <errorConditionFormula>If( (DATEVALUE(invoiceit_s__EndDateTime__c) &lt; invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Service_Activation_Date__c 
|| 
invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Service_End_Date__c &lt; DATEVALUE(invoiceit_s__EndDateTime__c)) &amp;&amp; 
NOT(ISBLANK(TEXT(invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Usage_Frequency__c))), true, false)</errorConditionFormula>
        <errorMessage>Usage End Date should be in between Order Charge Service Activation and Service End Dates (included)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Usage_Mediation_Status_Queued</fullName>
        <active>true</active>
        <description>Usage Status should be Queued</description>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT(ISPICKVAL( invoiceit_s__MediationStatus__c , &quot;Queued&quot;)) &amp;&amp; 
NOT(ISBLANK(TEXT(invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Usage_Frequency__c)))</errorConditionFormula>
        <errorMessage>Usage Mediation Status for new should be Queued</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>invoiceit_s__Usage_Start_Date_Between_Charge_Dates</fullName>
        <active>true</active>
        <description>This will make sure Usage Start Date Time will be in between Order Charge Service Activation and Service End Dates 
Note : Time is not consider as part of this rule</description>
        <errorConditionFormula>If( (DATEVALUE(invoiceit_s__StartDateTime__c) &lt; invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Service_Activation_Date__c 
|| 
invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Service_End_Date__c &lt; DATEVALUE(invoiceit_s__StartDateTime__c)) &amp;&amp; 
NOT(ISBLANK(TEXT(invoiceit_s__Order_Rate_Plan_Charge__r.invoiceit_s__Usage_Frequency__c))), true, false)</errorConditionFormula>
        <errorMessage>Usage Start Date Time should be in between Order Charge Service Activation and Service End Dates (included)</errorMessage>
    </validationRules>
</CustomObject>